Renamed Discord-Alt to YapZac

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="app">
       <aside class="sidebar">
-        <div class="brand">Discord-Alt</div>
+        <div class="brand">Yap Zac</div>
         <div class="channels"><h3>Channels</h3><div id="chanlist"></div></div>
         <div class="add"><input id="newchan" placeholder="create / join channel" /><button id="addbtn">Join</button></div>
         <div class="me"><span class="pill">You</span><input id="username" placeholder="pick a username" /></div>
       </aside>
       <main class="main">
-        <div class="header"><h2 id="room">#general</h2><span class="topic" id="topic">Simple, local, no-frills chat</span></div>
+        <div class="header"><h2 id="room">#general</h2><span class="topic" id="topic">General chat</span></div>
         <div class="messages" id="messages"></div>
         <div class="typing" id="typing"></div>
         <div class="composer"><input id="input" placeholder="Message #general" /><button id="send">Send</button></div>
